# tracemap

./: README.md  pyproject.toml
examples/: buggy.py  simple.py  slow.py
src/tracemap/: __main__.py
src/tracemap.egg-info/: SOURCES.txt  top_level.txt
src/tracemap/analysis/: cost.py
src/tracemap/export/: snapshot.py
src/tracemap/graph/: graph.py  node.py
src/tracemap/runtime/: frame_runtime.py  trace_hook.py
src/tracemap/semantics/: locals.py
tracemap/: api.py  pyproject.toml
tracemap.egg-info/: PKG-INFO  SOURCES.txt
tracemap/analysis/: structure.py
tracemap/runtime/: trace_hook.py
