[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracemap"
version = "0.1.0"
description = "Python execution tracing and runtime analysis engine"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Hitarth Desai" }
]

dependencies = []

[tool.setuptools]
packages = ["tracemap"]
